# 05-quickcheck

./: CHANGELOG.md  QuickCheck.hs  QuickList.hs  cis5520-quickcheck.cabal
